--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title>Home</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-	<h1>This is the content for Layout H1 Tag</h1>
+<div class="background">
+  <div class="nav"> <a class="a active" href="index.html">Home</a> <a class="b" href="mywork.html">My Work</a> <a class="c" href="about.html">About</a> <a class="d" href="contact.html">Contact</a> </div>
+</div>
+<div class="hero">
+  <h1>WITTRUP</h1>
+  <div class="button"> <a href="https://www.facebook.com/Marie.wkris?" class="btn btn one">FACEBOOK</a> 
+	  <a href="https://www.instagram.com/mariewittrup/?hl=da" class="btn btn two">INSTAGRAM</a></div>
+</div>
 </body>
 </html>
